--- a/umbrello/dialogs/sellanguagesbase.ui
+++ b/umbrello/dialogs/sellanguagesbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>SelectLanguagesBase</class>
 <widget class="QDialog">
     <property name="name">
@@ -8,12 +8,12 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>369</width>
+            <width>384</width>
             <height>342</height>
         </rect>
     </property>
     <property name="caption">
-        <string>Select Languages to Install ...</string>
+        <string>Select Languages to Install</string>
     </property>
     <grid>
         <property name="name">
@@ -30,7 +30,7 @@
                 <cstring>okButton</cstring>
             </property>
             <property name="text">
-                <string>OK</string>
+                <string>&amp;OK</string>
             </property>
         </widget>
         <widget class="QPushButton" row="2" column="2">
@@ -38,11 +38,11 @@
                 <cstring>cancelButton</cstring>
             </property>
             <property name="text">
-                <string>Cancel</string>
+                <string>&amp;Cancel</string>
             </property>
         </widget>
         <spacer row="2" column="0">
-            <property name="name" stdset="0">
+            <property name="name">
                 <cstring>Spacer1</cstring>
             </property>
             <property name="orientation">
@@ -65,8 +65,8 @@
             <property name="text">
                 <string>The following languages were found.
 
-Please select the Programming Languages that you want
-to install for Code Generation</string>
+Please select the programming languages that you want
+to install for code ceneration.</string>
             </property>
         </widget>
         <widget class="QListView" row="1" column="0" rowspan="1" colspan="3">
@@ -77,29 +77,29 @@ to install for Code Generation</string>
                 <property name="clickable">
                     <bool>false</bool>
                 </property>
-                <property name="resizeable">
+                <property name="resizable">
                     <bool>true</bool>
                 </property>
             </column>
             <column>
                 <property name="text">
-                    <string>Library name</string>
+                    <string>Library Name</string>
                 </property>
                 <property name="clickable">
                     <bool>false</bool>
                 </property>
-                <property name="resizeable">
+                <property name="resizable">
                     <bool>true</bool>
                 </property>
             </column>
             <column>
                 <property name="text">
-                    <string>Object name</string>
+                    <string>Object Name</string>
                 </property>
                 <property name="clickable">
                     <bool>false</bool>
                 </property>
-                <property name="resizeable">
+                <property name="resizable">
                     <bool>true</bool>
                 </property>
             </column>
