Alaign zoom input box to the left.
svn path=/trunk/kdesdk/umbrello/; revision=204534

--- a/umbrello/dialogs/diagrampropertiespage.ui
+++ b/umbrello/dialogs/diagrampropertiespage.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>DiagramPropertiesPage</class>
 <widget class="QWidget">
     <property name="name">
@@ -15,7 +15,7 @@
     <property name="caption">
         <string>Form1</string>
     </property>
-    <vbox>
+    <grid>
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
@@ -25,7 +25,31 @@
         <property name="spacing">
             <number>6</number>
         </property>
-        <widget class="QGroupBox">
+        <widget class="QGroupBox" row="1" column="0">
+            <property name="name">
+                <cstring>GroupBox2</cstring>
+            </property>
+            <property name="title">
+                <string>Documentation</string>
+            </property>
+            <grid>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <property name="margin">
+                    <number>11</number>
+                </property>
+                <property name="spacing">
+                    <number>6</number>
+                </property>
+                <widget class="QTextEdit" row="0" column="0">
+                    <property name="name">
+                        <cstring>documentation</cstring>
+                    </property>
+                </widget>
+            </grid>
+        </widget>
+        <widget class="QGroupBox" row="0" column="0">
             <property name="name">
                 <cstring>GroupBox1</cstring>
             </property>
@@ -42,7 +66,7 @@
                 <property name="spacing">
                     <number>6</number>
                 </property>
-                <widget class="QLayoutWidget" row="3" column="0">
+                <widget class="QLayoutWidget" row="3" column="0" rowspan="1" colspan="2">
                     <property name="name">
                         <cstring>Layout2</cstring>
                     </property>
@@ -74,7 +98,7 @@
                         </widget>
                     </hbox>
                 </widget>
-                <widget class="QLayoutWidget" row="4" column="0">
+                <widget class="QLayoutWidget" row="4" column="0" rowspan="1" colspan="2">
                     <property name="name">
                         <cstring>Layout1</cstring>
                     </property>
@@ -128,68 +152,8 @@
                         </widget>
                     </hbox>
                 </widget>
-                <widget class="QLayoutWidget" row="1" column="0">
+                <spacer row="4" column="2">
                     <property name="name">
-                        <cstring>Layout3</cstring>
-                    </property>
-                    <hbox>
-                        <property name="name">
-                            <cstring>unnamed</cstring>
-                        </property>
-                        <property name="margin">
-                            <number>0</number>
-                        </property>
-                        <property name="spacing">
-                            <number>6</number>
-                        </property>
-                        <widget class="QLabel">
-                            <property name="name">
-                                <cstring>TextLabel4</cstring>
-                            </property>
-                            <property name="text">
-                                <string>Zoom:</string>
-                            </property>
-                        </widget>
-                        <widget class="QSpinBox">
-                            <property name="name">
-                                <cstring>zoom</cstring>
-                            </property>
-                            <property name="sizePolicy">
-                                <sizepolicy>
-                                    <hsizetype>0</hsizetype>
-                                    <vsizetype>0</vsizetype>
-                                    <horstretch>0</horstretch>
-                                    <verstretch>0</verstretch>
-                                </sizepolicy>
-                            </property>
-                            <property name="maxValue">
-                                <number>500</number>
-                            </property>
-                            <property name="minValue">
-                                <number>10</number>
-                            </property>
-                        </widget>
-                    </hbox>
-                </widget>
-                <spacer row="1" column="1">
-                    <property name="name" stdset="0">
-                        <cstring>Spacer1</cstring>
-                    </property>
-                    <property name="orientation">
-                        <enum>Horizontal</enum>
-                    </property>
-                    <property name="sizeType">
-                        <enum>Expanding</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>20</width>
-                            <height>20</height>
-                        </size>
-                    </property>
-                </spacer>
-                <spacer row="4" column="1">
-                    <property name="name" stdset="0">
                         <cstring>Spacer3</cstring>
                     </property>
                     <property name="orientation">
@@ -205,8 +169,8 @@
                         </size>
                     </property>
                 </spacer>
-                <spacer row="3" column="1">
-                    <property name="name" stdset="0">
+                <spacer row="3" column="2">
+                    <property name="name">
                         <cstring>Spacer2</cstring>
                     </property>
                     <property name="orientation">
@@ -222,11 +186,11 @@
                         </size>
                     </property>
                 </spacer>
-                <widget class="Line" row="2" column="0" rowspan="1" colspan="2">
+                <widget class="Line" row="2" column="0" rowspan="1" colspan="3">
                     <property name="name">
                         <cstring>Line1</cstring>
                     </property>
-                    <property name="frameShape" stdset="0">
+                    <property name="frameShape">
                         <enum>HLine</enum>
                     </property>
                     <property name="frameShadow">
@@ -236,7 +200,7 @@
                         <enum>Horizontal</enum>
                     </property>
                 </widget>
-                <widget class="QLayoutWidget" row="0" column="0" rowspan="1" colspan="2">
+                <widget class="QLayoutWidget" row="0" column="0" rowspan="1" colspan="3">
                     <property name="name">
                         <cstring>Layout4</cstring>
                     </property>
@@ -265,33 +229,71 @@
                         </widget>
                     </hbox>
                 </widget>
-            </grid>
-        </widget>
-        <widget class="QGroupBox">
-            <property name="name">
-                <cstring>GroupBox2</cstring>
-            </property>
-            <property name="title">
-                <string>Documentation</string>
-            </property>
-            <grid>
-                <property name="name">
-                    <cstring>unnamed</cstring>
-                </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
-                <widget class="QTextEdit" row="0" column="0">
+                <widget class="QLayoutWidget" row="1" column="0">
                     <property name="name">
-                        <cstring>documentation</cstring>
+                        <cstring>layout6</cstring>
                     </property>
+                    <hbox>
+                        <property name="name">
+                            <cstring>unnamed</cstring>
+                        </property>
+                        <widget class="QLabel">
+                            <property name="name">
+                                <cstring>TextLabel4</cstring>
+                            </property>
+                            <property name="text">
+                                <string>Zoom:</string>
+                            </property>
+                        </widget>
+                        <widget class="QSpinBox">
+                            <property name="name">
+                                <cstring>zoom</cstring>
+                            </property>
+                            <property name="sizePolicy">
+                                <sizepolicy>
+                                    <hsizetype>0</hsizetype>
+                                    <vsizetype>0</vsizetype>
+                                    <horstretch>0</horstretch>
+                                    <verstretch>0</verstretch>
+                                </sizepolicy>
+                            </property>
+                            <property name="maxValue">
+                                <number>500</number>
+                            </property>
+                            <property name="minValue">
+                                <number>10</number>
+                            </property>
+                        </widget>
+                        <widget class="QLabel">
+                            <property name="name">
+                                <cstring>textLabel1</cstring>
+                            </property>
+                            <property name="text">
+                                <string>%</string>
+                            </property>
+                        </widget>
+                    </hbox>
                 </widget>
+                <spacer row="1" column="1" rowspan="1" colspan="2">
+                    <property name="name">
+                        <cstring>Spacer1</cstring>
+                    </property>
+                    <property name="orientation">
+                        <enum>Horizontal</enum>
+                    </property>
+                    <property name="sizeType">
+                        <enum>Expanding</enum>
+                    </property>
+                    <property name="sizeHint">
+                        <size>
+                            <width>210</width>
+                            <height>20</height>
+                        </size>
+                    </property>
+                </spacer>
             </grid>
         </widget>
-    </vbox>
+    </grid>
 </widget>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
